# RealityMerge

./: .clang-format  .gitignore  .gitmodules  AUTHORS.md  CMakeLists.txt  LICENSE  README.md
Test/: a-cube.automerge  icon.svg.import  logo.png.import  logo.svg.import  openxr_action_map.tres  project.godot  test.gd  test.tscn  usd.tscn  xr_origin_3d.tscn
Test/addons/godot-xr-tools/audio/: surface_audio.tscn
Test/addons/godot-xr-tools/hands/blend/: hand_l.blend.import  hand_r.blend.import
Test/addons/godot-xr-tools/hands/blend/animations/: animations_hand_l.blend.import  animations_hand_r.blend.import
Test/addons/godot-xr-tools/interactables/: interactable_hinge.tscn  interactable_joystick.tscn
Test/addons/godot-xr-tools/misc/: vr_common_shader_cache.tscn
Test/addons/godot-xr-tools/staging/: staging.tscn
Test/addons/kenney_prototype_textures/dark/: texture_02.png.import
modules/reality_merge/: SCsub  automerge.cpp  automerge.h  automerge_resource.cpp  automerge_resource.h  exception_callback.cpp  exception_callback.h  reality_merge.cpp  reality_merge.h  register_types.cpp  register_types.h  usdj_basis.cpp  usdj_basis.h  usdj_body_updater.cpp  usdj_body_updater.h  usdj_box_mesh.cpp  usdj_box_mesh.h  usdj_box_shape_3d.cpp  usdj_box_shape_3d.h  usdj_box_size_extractor.cpp  usdj_box_size_extractor.h  usdj_color.cpp  usdj_color.h  usdj_color_extractor.cpp  usdj_color_extractor.h  usdj_geometry_extractor.cpp  usdj_geometry_extractor.h  usdj_material.cpp  usdj_material.h  usdj_mediator.cpp  usdj_mediator.h  usdj_projection.cpp  usdj_projection.h  usdj_quaternion.cpp  usdj_quaternion.h  usdj_real.cpp  usdj_real.h  usdj_reals.cpp  usdj_reals.h  usdj_static_body_3d.cpp  (+12 more)
